work on css text overflow (not resolved)

--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,17 @@ ul {
     flex-direction: row;
 }
 
+.listing-info-div {
+    width: 90%;
+    overflow-y: hidden;
+    display: block;
+    height: 6rem;
+    line-height: 1.5rem;
+    overflow-y: hidden;
+    text-overflow: ellipsis; /* ellipsis is not working */
+    background-color: pink;
+}
+
 .one-item-image {
     width: 15rem;
     height: 15rem;
@@ -153,6 +164,7 @@ ul {
     display: flex;
     flex-direction: row;
     width: 90%;
+    justify-content: center;
 }
 
 #one-item-card {
